# Xevacurate_Snakemake_UHN_Lung

./: Dockerfile.r  LICENSE  README.md  pyproject.toml
.snakemake/metadata/: cmVzdWx0cy91cGRhdGUvZHJ1Z19maWx0ZXJlZF9vdXQudHN2  cmVzdWx0cy91cGRhdGUvdXBkYXRlX21vZGVsX2RhdGEudHN2  cmVzdWx0cy91cGRhdGUvdXBkYXRlX21vZGVsX2RydWdfYmF0Y2hfZGF0YS50c3Y=  cmVzdWx0cy91cGRhdGUvdXBkYXRlX21vZGVsX2RydWdfZGF0YS50c3Y=  cmVzdWx0cy94ZXZhc2V0L1VITl9Uc2FvX0x1bmdfRHJ1Z1Jlc3BvbnNlXzIwMjJfdjEucmRz  cmVzdWx0cy9idWlsZC9DTlZfcGRhdGEuY3N2  cmVzdWx0cy9idWlsZC9STkFTZXFfcGRhdGEuY3N2  cmVzdWx0cy9idWlsZC9kcnVnLmNzdg==  cmVzdWx0cy9idWlsZC9leHBEZXNpZ24uY3N2  cmVzdWx0cy9idWlsZC9leHBlcmltZW50LmNzdg==  cmVzdWx0cy9idWlsZC9tb2RUb0Jpb2Jhc2VNYXAuY3N2  cmVzdWx0cy9idWlsZC9tb2RlbC5jc3Y=  cmVzdWx0cy9idWlsZC9tdXRhdGlvbl9wZGF0YS5jc3Y=  cmVzdWx0cy9wcm9jZXNzL3Byb2Nlc3NlZF9kYXRhLnRzdg==  cmVzdWx0cy9wcm9jZXNzL3FjX3JlcG9ydC5qc29u  cmVzdWx0cy9zY2FuL2FsbF9maWxlX3NjYW4uanNvbg==
expected_results/scan/: all_file_scan.json
expected_results/update/: drug_filtered_out.tsv
results/process/: qc_report.json
results/update/: drug_filtered_out.tsv
src/xevacurate_new/: build_function.py  config.py  create_xevaset.R  draw_CX_plot.R  explore_xevaset.R  omics_feature.R  process_function.py  process_function.py.bak  process_output.txt  run_build.py  run_process.py  run_scan.py  run_update.py  scan_function.py  steps.py  success_files.txt  tmp.txt  update_function.py
workflow/: Snakefile  Snakefile.bak
workflow/config/: config.yaml
workflow/rules/: curation.smk
workflow/scripts/: create_xevaset.R  run_build.py  run_process.py  (+2 more)
(+124 files in other folders)
