[project]
authors = [{name = "Guanqiao Feng", email = "fengguanqiao321@gmail.com"}]
dependencies = []
description = "Add a short description here"
name = "xevacurate_new"
requires-python = ">= 3.11"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.project]
channels = ["conda-forge", 'bioconda']
platforms = ["osx-arm64"]

[tool.pixi.pypi-dependencies]
xevacurate_new = { path = ".", editable = true }

[tool.pixi.tasks]

[tool.pixi.dependencies]
pandas = ">=2.2.3,<3"
openpyxl = ">=3.1.5,<4"
snakemake = ">=9.9.0,<10"
r-base = "4.3.*"
r-optparse = ">=1.7.5,<2"
r-dplyr = ">=1.1.4,<2"
